# codingDojoEnv

./: CMakeLists.txt  Readme.md
.devcontainer/: devcontainer.json
src/: Dummy.cpp  Snail.cpp  Tool.cpp  main.cpp
src/include/: Dummy.h  Snail.h  Tool.h
test/: snail_tests.cpp  tests.cpp
